tests/failing/primes2.tail
let v1:<int>9999 = dropV{[int],[9999]}(1,iotaV(10000)) in
let v7:[int]2 = transp{[int],[2]}(reshape{[int],[1,2]}([9999,9999],v1)) in
let v8:[int]2 = reshape{[int],[1,2]}([9999,9999],v1) in
let v12:[bool]2 = each{[int,bool],[2]}(fn v11:[int]0 => eqi(0,v11),zipWith{[int,int,int],[2]}(resi,v7,v8)) in
let v17:[int]1 = compress{[int],[1]}(each{[int,bool],[1]}(fn v16:[int]0 => eqi(1,v16),transp{[int],[1]}(reduce{[int],[1]}(addi,0,each{[bool,int],[2]}(b2i,transp{[bool],[2]}(v12))))),v1) in
let v20:[int]0 = prSclI(reduce{[int],[0]}(maxi,~2147483648,v17)) in
i2d(v20)
